tests/fixtures/valid/declarations/basic_library.pine
//@version=6
library("Lib")
export f(float x) => x + 1
