tests/fixtures/invalid/semantic/compound_undeclared.pine
//@version=6
indicator("x")
y += 1
